[feat] 호텔 이미지 관련 작업 추가